# SistemahospAB

./: CMakeLists.txt
SistemahospAB/: CMakeLists.txt  SistemahospAB.cpp  SistemahospAB.h  citaMedica.cpp  citaMedica.h  main.cpp  medico.cpp  medico.h  paciente.cpp  paciente.h
